# test_rust_rest

./: .env.example  Cargo.toml  Rocket.toml
src/: main.rs
src/internal/image/: facedetect.rs  mod.rs
src/routes/: mod.rs  not_found.rs
src/routes/classify/: mod.rs  model.rs
src/routes/greating/: mod.rs
src/routes/greeting/: mod.rs
src/routes/uploads/: mod.rs  model.rs
