[package]
name = "rust_test_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rocket-multipart-form-data = "0.10.2"
image = "0.24.1"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]